--- a/triangle.html
+++ b/triangle.html
@@ -10,7 +10,7 @@
     <a href="/triangle.html">Is Triangle or not?</a>
     <a href="/quiz.html">Quiz</a>
     <a href="/hyp.html">Hypotenuse</a>
-    <a href="/area.html">Area</a>
+    <a href="/index.html">Area</a>
   </nav>
   <body>
     <h1>This is a triangle?</h1>
